2006-06-01  Mark Wielaard  <mark@klomp.org>

	* java/util/logging/LogManager.java (createInstance): Always add
	original exception on warning.

2006-06-01  Lillian Angel  <langel@redhat.com>

	* tools/gnu/classpath/tools/appletviewer/AppletTag.java
	(prependCodebase): Fixed check. No dirname was ever considered to 
	be a file, so every applet fell into the if-statement causing a lot
	of classloading problems with the applets.

2006-06-01  Sven de Marothy  <sven@physto.se>

	Patch submitted by Boris Dusek.
	* native/jni/qt-peer/qtmenupeer.cpp
	Fix segfault

2006-06-01  Roman Kennke <kennke@aicas.com>

	* javax/swing/JTable.java
	(AccessibleJTableCell.getAccessibleRow): Added comment explaining
	why the behaviour is like it is.
	(AccessibleJTableCell.getAccessibleStateSet): Implemented.
	(AccessibleJTableHeader): New inner class.
	(AccessibleJTableHeaderCell): New inner class.
	(AccessibleJTable.lastSelectedRow): New field.
	(AccessibleJTable.lastSelectedColumn): New field.
	(AccessibleJTable.caption): New field.
	(AccessibleJTable.summary): New field.
	(AccessibleJTable.rowDescriptions): New field.
	(AccessibleJTable.columnDescriptions): New field.
	(AccessibleJTable): Initialize lastSelectedRow and lastSelectedColumn.
	(AccessibleJTable.getAccessibleSelection(int)): Implemented.
	(AccessibleJTable.isAccessibleChildSelected): Implemented.
	(AccessibleJTable.addAccessibleSelection): Implemented.
	(AccessibleJTable.removeAccessibleSelection): Implemented.
	(AccessibleJTable.clearAccessibleSelection): Implemented.
	(AccessibleJTable.selectAllAccessibleSelection): Implemented.
	(AccessibleJTable.valueChange): Implemented.
	(AccessibleJTable.tableRowsInserted): Implemented.
	(AccessibleJTable.tableRowsDeleted): Implemented.
	(AccessibleJTable.handleRowChange): New helper method.
	(AccessibleJTable.columnAdded): Implemented.
	(AccessibleJTable.columnMarginChanged): Implemented.
	(AccessibleJTable.columnMoved): Implemented.
	(AccessibleJTable.columnRemoved): Implemented.