@@ -639,12 +639,9 @@ public abstract class CairoGraphics2D extends Graphics2D
     if (c == null)
       c = Color.BLACK;
 
-    if (! c.equals(fg))
-      {
-        fg = c;
-        paint = c;
-        updateColor();
-      }
+    fg = c;
+    paint = c;
+    updateColor();
   }
   
   /**
