@@ -1,3 +1,8 @@
+2006-06-01  Sven de Marothy  <sven@physto.se>
+
+	* gnu/java/awt/peer/gtk/CairoGraphics2D.java:
+	(setColor): Update the cairo paint.
+
 2006-06-01  Mark Wielaard  <mark@klomp.org>
 
 	* java/util/logging/LogManager.java (createInstance): Always add
